--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/react": "^16.14.24",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.23",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
     "graphql": "^16.3.0",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
-    "react-router-dom": "^6.3.0",
+    "react-router": "5.2.1",
+    "react-router-dom": "5.2.1",
     "react-scripts": "5.0.0",
     "typescript": "~4.1.5"
   },
